# django-two-factor-auth

./: .gitignore  README.md  README.rst  pyproject.toml  render.yaml  requirements.txt
example/: create_superuser.py  database.sqlite  render.yaml  requirements.txt  settings.py  wsgi.py
example/templates/: _base.html  home.html  registration.html
two_factor/templates/two_factor/core/: login.html
